@@ -33,6 +33,7 @@ class OmFlattenStringNode : public OmIndexerNode {
 	{ }
     private:
 	void calculate() {
+	    request_inputs();
 	    OmIndexerMessage input = get_input_record("in");
 	    if (input->is_empty()) {
 		// propagate empty messages
