@@ -49,6 +49,7 @@ class OmRegexReplaceNode : public OmIndexerNode {
 	Regex regex;
 	// FIXME: implement config_modified()
 	void calculate() {
+	    request_inputs();
 	    OmIndexerMessage input = get_input_record("in");
 
 	    if (!regex_from_config) {
