@@ -67,6 +67,7 @@ class OmStopWordNode : public OmIndexerNode {
     private:
 	std::set<std::string> stopwords;
 	void calculate() {
+	    request_inputs();
 	    OmIndexerMessage input = get_input_record("in");
 	    if (input->is_empty()) {
 		set_empty_output("out");
